[tool.poetry]
name = "demo-streamlit-heroku"
version = "0.1.0"
description = ""
authors = ["None"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^0.81.0"
pandas = "^1.2.4"
bokeh = "^2.3.1"
matplotlib = "^3.4.1"
seaborn = "^0.11.1"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.0.14"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
